Fix spacing between sections on mobile

--- a/styles.css
+++ b/styles.css
@@ -262,10 +262,10 @@ body {
     }
 
     .flex-item-img {
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
         width: 100%;
-        margin-top: 150px;
+        margin-top: 100px;
         background-image: url(./Assets/avatar.svg);
         background-size: contain;
         background-position: center;
@@ -290,6 +290,7 @@ body {
         font-size: 4rem;
         font-family: 'Playfair Display', Times, serif;
         margin-bottom: 20px;
+        margin-top: -120px;
     }
     
     .flex-item-text h2 {
@@ -431,7 +432,7 @@ body {
     .about {
         position: relative;
         background-color: #c2c2c2;
-        height: 110vh;
+        height: 120vh;
     }
     
     .flex-container-about {
@@ -720,7 +721,7 @@ body {
         position: relative;
         z-index: 2;
         background-color: #0B0F1E;
-        height: 70vh;
+        height: 90vh;
     }
 
     .flex-container-contact {
